# env-codewars

./: LICENSE  README.md
haskell/codewars/: LICENSE  codewars.cabal  file-watch.sh
haskell/codewars/src/Codewars/: Kata.hs
haskell/codewars/test/Codewars/: KataSpec.hs
