name:                codewars
version:             0.1.0.0
synopsis:            Codewars environments for various programming languages.
description:         Please see README.md
homepage:            https://github.com/jship/env-codewars#readme
license:             MIT
license-file:        LICENSE
author:              Jason Shipman
maintainer:          jasonpshipman (AT) gmail (DOT) com
copyright:           Jason Shipman (C) 2016
category:            Test
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Codewars.Kata
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , split
  default-language:    Haskell2010

test-suite codewars-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , codewars
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jship/env-codewars
